kubernetes/apps/database/vernemq/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: vernemq
spec:
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: network
      sectionName: https
  hostnames:
    - vernemq.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            value: /status.json
      backendRefs: &backendRefs
        - name: vernemq-headless
          port: 8888
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs: *backendRefs
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs: *backendRefs
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /status
